# Tuesday

./: README.md  pyproject.toml
HTML/: 1index.html
config/: __init__.py  config.py
migrations/: env.py
migrations/versions/: eea206bf7b52_добавление_столбика_имени_для_чата.py
src/: app.py  main.py
src/config/: config.py
src/db/: alembic_envpy_fix_for_migrate  create_schema.py  database.db  db.py
src/forms/: forms.py
src/models/: models.py
src/routes/: routes.py
src/static/css/: styles.css
src/static/js/: script.js  task_chat.js
src/templates/: base.html
src/templates/about/: about.html  contact.html
src/templates/base/: base.html  footer.html  navigation.html
src/templates/boards/: add_column_content.html  add_user_team.html  chat_page.html  column_create.html  create_board.html  delete_user_team.html  new_task.html  shared_board.html
src/templates/error/: page401.html  page404.html  page500.html
src/templates/home/: index.html  register.html
src/templates/user/: edit_profile.html  login.html  profile.html  projects.html  register.html  user_info.html
src/views/: __init__.py  about_views.py  home_views.py  socket_events.py  todo_views.py  user_views.py  view.py
