[tool.poetry]
name = "Tuesday"
version = "0.1.0"
description = "Task manager for business"
authors = ["Klechshin V. <jannigma666@gmail,com>"]
license = "GNU"
readme = "README.md"
packages = [
    { include = "app", from = "src/" },
    { include = "controllers", from = "src/" }
    ]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
Jinja2 = "^3.1.3"
SQLAlchemy = "^2.0.29"
WTForms = "^3.1.2"
Werkzeug = "^3.0.1"
Flask-Login = "^0.6.3"
Flask-SQLAlchemy = "^3.1.1"
dynaconf = "^3.2.4"
black = "^23.12.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[tool.poetry.group.test.dependencies]
#pytest = "^7.4.4"
Flask-Testing = "^0.8.1"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
skip_magic_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
